--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "lintfix": "prettier --write --list-different ."
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "^5.0.0-1647967358.de1bb0f",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
-    "nuxt": "^2.15.8",
+    "nuxt": "^2.13.3",
+    "qrcode.vue": "^1.7.0",
+    "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
